--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ USE_REDIS=False
 CRYPTO_BOT_API_TOKEN=31932:AA2seT3MD3liN5QE9L9439JYOXCPpSw6z6h
 CRYPTO_BOT_WEBHOOK_URL=/crypto_webhook
 
-POSTGRES_USER=someusername
-POSTGRES_PASSWORD=postgres_pass12345
-POSTGRES_DB=bot
-DB_HOST=pg_database
+POSTGRES_USER=doadmin
+POSTGRES_PASSWORD=AVNS_tdu1QNX5n-ZAag6Oomu
+POSTGRES_DB=defaultdb
+DB_HOST=db-postgresql-ams3-61356-do-user-20833656-0.e.db.ondigitalocean.com
